# resources/views/layouts/app.blade.php
@@ -35,19 +35,41 @@
 <body class="antialiased">
   <main class="relative flex items-top justify-center min-h-screen sm:items-center py-4 sm:pt-0">
     <header>
+
       <h1><a href="{{ url('/home') }}">Sailor's Dream</a></h1>
-      <form action="users.php" method="GET">
-        <input id="search" type="text" placeholder="Type here">
-        <input id="submit" type="submit" value="Search">
+
+      <a class="button" href="{{ url('/categories') }}"> Categories </a>
+      <a class="button" href="{{ url('/products') }}"> Products </a>
+
+
+
+
+
+
+      <form action="{{ route('products') }}" method="GET" role="search">
+        <div class="input-group">
+          <input type="text" class="form-control mr-2" name="term" placeholder="Search Products" id="term">
+          <button class="btn btn-info" type="submit" title="Search Products">
+            <span class="fas fa-search"> Search </span>
+          </button>
+        </div>
       </form>
 
-      @if (Auth::check())
 
+
+
+
+
+
+      @if (Auth::check())
       <a class="button" href="{{ route('user.id', ['id' => ($id = (auth()->user()->id ) ) ] ) }}"> User Profile </a>
       <a class="button" href="{{ url('/logout') }}"> Logout </a> <span>{{ Auth::user()->name }}</span>
       @else
       <a class="button" href="{{ url('/login') }}"> Login </a>
       @endif
+
+      <a class="button" href="{{ route('help') }}"> Help</a>
+      <a class="button" href="{{ url('/about') }}"> About Us</a>
     </header>
     <section id="content">
       @yield('content')
